--- a/jalendar/src/main/res/values/strings.xml
+++ b/jalendar/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="thu">周四</string>
     <string name="fri">周五</string>
     <string name="sat">周六</string>
+    <string name="year">%1$d年</string>
+    <string name="month">%1$d月</string>
+    <string name="day">日</string>
+    <string name="year_month_day">%1$d年%2$d月%3$d日</string>
 </resources>
